@@ -8,3 +8,4 @@
 ./test3.cpp
 ./test4.cpp
 ./test5.cpp
+./test6.cpp
