@@ -9,6 +9,7 @@ OBJ_LIST = \
 ../wintest-obj/test3.o \
 ../wintest-obj/test4.o \
 ../wintest-obj/test5.o \
+../wintest-obj/test6.o \
 
 
 ASM_LIST = \
@@ -22,6 +23,7 @@ ASM_LIST = \
 ../wintest-obj/test3.s \
 ../wintest-obj/test4.s \
 ../wintest-obj/test5.s \
+../wintest-obj/test6.s \
 
 
 DEP_LIST = \
@@ -35,6 +37,7 @@ DEP_LIST = \
 ../wintest-obj/test3.dep \
 ../wintest-obj/test4.dep \
 ../wintest-obj/test5.dep \
+../wintest-obj/test6.dep \
 
 
 ASM_OBJ_LIST = \
@@ -73,6 +76,9 @@ include $(RULES_FILE)
 ../wintest-obj/test5.o : ./test5.cpp
 	$(CC) $(CCOPT) $< -o $@
 
+../wintest-obj/test6.o : ./test6.cpp
+	$(CC) $(CCOPT) $< -o $@
+
 
 
 ../wintest-obj/DragWindow.s : ./DragWindow.cpp
@@ -103,6 +109,9 @@ include $(RULES_FILE)
 	$(CC) -S $(CCOPT) $< -o $@
 
 ../wintest-obj/test5.s : ./test5.cpp
+	$(CC) -S $(CCOPT) $< -o $@
+
+../wintest-obj/test6.s : ./test6.cpp
 	$(CC) -S $(CCOPT) $< -o $@
 
 
@@ -136,6 +145,9 @@ include $(RULES_FILE)
 
 ../wintest-obj/test5.dep : ./test5.cpp
 	$(CC) $(CCOPT) -MM -MT $(OBJ_PATH)/test5.o $< -MF $@
+
+../wintest-obj/test6.dep : ./test6.cpp
+	$(CC) $(CCOPT) -MM -MT $(OBJ_PATH)/test6.o $< -MF $@
 
 
 
