@@ -37,6 +37,8 @@ namespace App4 { int testmain(CmdDisplay cmd_display); }
 
 namespace App5 { int testmain(CmdDisplay cmd_display); }
 
+namespace App6 { int testmain(CmdDisplay cmd_display); }
+
 /* WinMain() */ 
 
 DesktopConfig AppDesktopConfig={IDI_APP,IDI_SMALL_APP};
@@ -45,7 +47,7 @@ const CCore::AbortMsgFuncType CCore::AbortMsgFunc = AbortMsgBox ;
 
 extern "C" int WIN32_CALLTYPE WinMain(Win32::HModule,Win32::HModule,char *,unsigned cmd_show)
  {
-  return App5::testmain(MapCmdShow(cmd_show)); 
+  return App6::testmain(MapCmdShow(cmd_show)); 
  }
  
  
