@@ -106,7 +106,7 @@ represented as <b>UInt</b> type.
   
   static SInt <span class="Att">MoveNeg</span>(SInt a,UInt delta); 
   
-  static SInt <span class="Att">Move</span>(SInt a,int e,UInt delta); 
+  static SInt <span class="Att">Move</span>(SInt a,SInt e,UInt delta); 
  };
 
 </pre>
